panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__decl_in_global_scope__test_error_declaration_without_type_multiple_qualifiers.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/decl_in_global_scope/test_error_declaration_without_type_multiple_qualifiers.c
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: declaration does not specify a type
   ╭─[panko/tests/cases/decl_in_global_scope/test_error_declaration_without_type_multiple_qualifiers.c:1:1]
   │
 1 │ const volatile x;
   │ ───────┬──────  
   │        ╰──────── type missing
───╯
